--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,10 @@
   }
 }
 
+.page-content-shadow {
+  box-shadow: 0px 0px 10px black;
+}
+
 .contentful-document ul {
   list-style-type: disc;
   padding-left: 15px;
@@ -24,12 +28,14 @@
 }
 
 .contentful-document > p {
-  margin: 8px 0;
+  margin: 0 0 8px;
 }
 
+.contentful-document h2,
 .contentful-document h3 {
   font-size: 18px;
   font-weight: 500;
+  margin-top: 16px;
 }
 
 .hero-text-shadow {
