--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@
     --color-blue-gray-dark: 220deg 8% 23%;
     --color-off-black: 0deg 0% 0%;
     --color-off-white: 0deg 0% 100%;
+    --color-gold: 51deg 100% 50%;
   }
 }
 
