--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,8 @@
 @theme {
   --color-white: hsl(0deg 0% 93%); /* #EDEDED */
   --color-black: hsl(0deg 0% 15%); /* #272727 */
-  --color-gray: hsl(0deg 0% 45%); /* #747474 */
+  --color-gray-light: hsl(0deg 0% 80%); /* #cccccc */
+  --color-gray: hsl(0deg 0% 74%); /* #747474 */
   --color-orange: hsl(16deg 100% 59%); /* #FF652F */
   --color-yellow: hsl(54deg 100% 50%); /* #FFE400 */
   --color-green: hsl(156deg 79% 37%); /* #14A76C */
