update imports, create RichTextViewer, fix JSON sent to db

--- a/src/components/molecules/text-editor/tiptap.css
+++ b/src/components/molecules/text-editor/tiptap.css
@@ -4,10 +4,9 @@
   }
 
   /* List styles */
-  ul,
-  ol {
+  ul {
     padding: 0 1rem;
-    margin: 1.25rem 1rem 1.25rem 0.4rem;
+    list-style: disc;
 
     li p {
       margin-top: 0.25em;
@@ -15,18 +14,13 @@
     }
   }
 
+
   /* Heading styles */
   h1,
   h2 {
-    line-height: 1.1;
-    margin-top: 2.5rem;
-    text-wrap: pretty;
-  }
-
-  h1,
-  h2 {
-    margin-top: 3.5rem;
-    margin-bottom: 1.5rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    font-weight: 600;
   }
 
   h1 {
