--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,9 +3,10 @@
 @theme {
   --color-white: hsl(0deg 0% 93%); /* #EDEDED */
   --color-black: hsl(0deg 0% 15%); /* #272727 */
-  --color-gray-lighter: hsl(0deg 0% 90%); /* #e3e2e2 */
-  --color-gray-light: hsl(0deg 0% 80%); /* #cccccc */
+  --color-gray-dark: hsl(0deg 0% 33%); /* #545454 */
   --color-gray: hsl(0deg 0% 74%); /* #747474 */
+  --color-gray-light: hsl(0deg 0% 80%); /* #cccccc */
+  --color-gray-lighter: hsl(0deg 0% 90%); /* #e3e2e2 */
   --color-orange: hsl(16deg 100% 59%); /* #FF652F */
   --color-orange-dark: hsl(16deg 100% 52%); /* #ff4b0a */
   --color-yellow: hsl(54deg 100% 50%); /* #FFE400 */
